# cmath10

./: .gitignore  LICENSE  Makefile  README.md  cmath10.py  csmoke.py  math10.py  pylintrc  pyproject.toml  pyvenv.cfg  smoke.py  ssmoke.py  test_cmath10.py  test_math10.py
.github/workflows/: pylint.yml
mathdata/: README.md  cmath_testcases.txt
